uronode (2.11-1) UNRELEASED; urgency=medium

  * New upstream update
    - Patches Refreshed
  * Removed makefile-install-locations patch

 -- Dave Hibberd <d@vehibberd.com>  Mon, 20 Apr 2020 03:25:08 +0100

uronode (2.10-1) unstable; urgency=medium
  * New upstream update
    - Patches Refreshed
  * Removed multiarch-libc patch, included upstream

 -- Dave Hibberd <d@vehibberd.com>  Sat, 17 Aug 2019 23:15:37 +0100

uronode (2.9-1) unstable; urgency=medium

  * Salsa vcs added
  * Architecture changed to linux-any
  * Non-Interactive configure patched in
  * Upstream bump to 2.9
    - Patches Refreshed
  * New patch added (Closes: #911491)
    - Allow the compiler to choose net/if.h
  * Two old patches Removed
    - flexd-spelling
    - no-install-gz-manpages
  * debian/control
    - Updated to Standards Version 4.3.0.1
  * debian/copyright
    - Secure Copyright url added

 -- Dave Hibberd <d@vehibberd.com>  Thu, 27 Dec 2018 16:19:08 +0000

uronode (2.8.1-1) unstable; urgency=medium

  * New Upstream import
    - patches refreshed
  * debian/control
    - Updated to Standards Version 4.1.3
  * debian/compat
    - Updated to Debhelper 11

 -- Dave Hibberd <d@vehibberd.com>  Sat, 20 Jan 2018 12:20:19 +0000

uronode (2.7-1) unstable; urgency=medium

  * New Upstream import
    - Patches refreshed
  * debian/patches/hardening
    - Updated flags to be included
  * debian/patches/install-dir-creation
    - Refreshed to accommodate new lines
  * debian/patches/flexd-spelling
    - Added to fix binary spelling error
  * debian/control
    - Updated Standards Version to 4.1.1
    - Removed zlib1g-dev dependency

 -- Dave Hibberd <d@vehibberd.com>  Tue, 22 Aug 2017 14:01:16 +0100

uronode (2.6-1) unstable; urgency=medium

  * New Upstream import
    - Patches refreshed
  * debian/control
    - Updated Standards version to 3.9.8
  * debian/patches/hardening
    - Added options for CXXFLAGS and CPPFLAGS

 -- Dave Hibberd <d@vehibberd.com>  Sat, 21 Jan 2017 15:41:58 +0000
